# flu-evidence-synthesis

./: .Rbuildignore  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  Doxyfile.in  NAMESPACE  README.md  UseDoxygen.cmake  autotest.sh  build.sh  install.sh  travis.sh
R/: RcppExports.R  cost_effectiveness.R  data.R  demography.R  deprecated.R  epimodel.R  ggplot2_ext.R  mcmc.R  vaccine.R
Rscripts/: generate_files_David.R
Rscripts/RSave/: CEA_script.R  vaccine_env.R
SRC/: main.c
data/: age_sizes.rda  confirmed.samples.rda  coverage.rda  demography.rda  ili.rda  inference.results.rda  mcmcsample.rda  polymod_uk.rda  uptake.rda  vaccine_calendar.rda
fluEvidenceSynthesis/: .Rbuildignore  DESCRIPTION  NAMESPACE  autotest.sh  build.sh  install.sh
fluEvidenceSynthesis/R/: RcppExports.R  mcmc.R  vaccine.R
fluEvidenceSynthesis/data/: age_sizes.RData  confirmation.RData  ili.RData  ili.rda  mcmcsample.RData  polymod_uk.RData  sample.RData  uptake.RData  vaccine_calendar.RData
fluEvidenceSynthesis/man/: fluEvidenceSynthesis-package.Rd
fluEvidenceSynthesis/src/: RcppExports.cpp  cholesky.cc  cholesky.hh  contacts.cc  contacts.h  contacts.hh  data.cc  data.h  data.hh  fluEvidenceSynthesis_types.h  inference.cc  mcmc.h  model.cc  model.h  model.hh  ode.cc  ode.h  proposal.cc  proposal.h  proposal.hh  rapi.cc  rcpp_hello_world.cpp  rcppwrap.cc  rcppwrap.hh  state.cc  state.h  state.hh  vaccine.cc  vaccine.h  vaccine.hh
fluEvidenceSynthesis/tests/: testthat.R
fluEvidenceSynthesis/tests/manual/: README.md  runManualTests.sh  testInference.R
fluEvidenceSynthesis/tests/testthat/: testCholesky.R  testCovariance.R  testInference.R  testMCMC.R  testODE.R  testVaccine.R
fluEvidenceSynthesis/vignettes/: inference.Rmd  usage.Rmd  vaccination.Rmd
include/bson/: bson_stream.hh
inst/: CITATION
man/: StatCI.Rd  adaptive.mcmc.Rd  adaptive.mcmc.cpp.Rd  age_group_levels.Rd  age_group_limits.Rd  age_group_mapping.Rd  age_sizes.Rd  aggregate.model.Rd  aggregateModel.Rd  as.age.group.Rd  as.vaccination.calendar.Rd  as_R0.Rd  as_age_group.Rd  as_transmission_rate.Rd  as_vaccination_calendar.Rd  binomial.inference.Rd  confirmed.samples.Rd  contact.matrix.Rd  contact_matrix.Rd  coverage.Rd  credible.interval.model.Rd  demography.Rd  dmultinom.cpp.Rd  getTimeFromWeekYear.Rd  hospitalisations.Rd  ili.Rd  infection.model.Rd  infectionODEs.Rd  infectionODEs.cpp.Rd  inference.Rd  inference.results.Rd  inference_cpp.Rd  inference_multistrains.Rd  llikelihood.cases.Rd  log_likelihood_cases.Rd  mcmcsample.Rd  mortality.Rd  parameter_mapping.Rd  polymod_uk.Rd  public_health_outcome.Rd  (+13 more)
src/: RcppExports.cpp  contact_matrix.cc  contacts.cc  contacts.h  contacts.hh  data.cc  data.h  data.hh  inference.cc  inference.h  io.cc  io.hh  json.hh  main.cc  mcmc.h  model.cc  model.h  model.hh  ode.h  proposal.cc  proposal.h  proposal.hh  rapi.cc  rcppwrap.cc  rcppwrap.h  state.cc  state.h  state.hh  trace.cc  trace.hh  vaccine.cc  vaccine.h  vaccine.hh  vaccine_simulation.cc
tests/: autotest.sh  test_fes.cc
tests/manual/: runManualTests.sh  testInference.R
tests/testthat/: testContacts.R  testCostEffectiveness.R  testCovariance.R  testDemography.R  testInference.R  testMCMC.R  testODE.R  testVaccine.R
vignettes/: adapting-the-transmission-model.R  adapting-the-transmission-model.Rmd  inference.Rmd  modelling.Rmd  references.bib  vaccination.Rmd
